# qse

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING  CONTRIBUTIONS.html  CONTRIBUTIONS.md  INSTALLATION.html  INSTALLATION.md  README.md  api.html  api_alternative.html  bump_patch.py  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  qse.html  qse_myqlm_spinup.py  qse_pulser_spin_up.py  readme.html  removal.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.sh  structure-factor.md  utils.html
.github/workflows/: auto-bump-version.yml  bump-version-bot.yml  generate-docs.yml  jb-doc.yml  on-push.yml  publish-pypi.yml  python-package.yml  qse_myqlm.yml  qse_pulser.yml  sphinx.yml
_autosummary/: qse.calc.calculator.html  qse.calc.html  qse.calc.messages.html  qse.calc.myqlm.html  qse.calc.pulser.html  qse.constraints.html  qse.html  qse.lattices.html  qse.lattices.lattices.html  qse.magnetic.html  qse.qbit.html  qse.qbits.html  qse.signal.html  qse.utils.html  qse.visualise.html
_modules/: index.html
_modules/qse/: cell.html  magnetic.html  operator.html  qbit.html  qbits.html  qubo.html  signal.html  utils.html  visualise.html
_modules/qse/calc/: blockade_radius.html  calculator.html  exact.html  messages.html  myqlm.html  pulser.html  qutip.html
_modules/qse/lattices/: lattices.html
_modules/qse/operator/: operator.html  operators.html
_modules/qse/signal/: signal.html  signals.html
_modules/qse/vis/: qbits.html  signal.html  visualise.html
_sources/: CONTRIBUTIONS.md  index.md  index.rst  qse.rst
_sources/_autosummary/: qse.calc.calculator.rst  qse.calc.messages.rst  qse.calc.myqlm.rst  qse.calc.pulser.rst  qse.calc.rst  qse.constraints.rst  qse.lattices.lattices.rst  qse.lattices.rst  qse.magnetic.rst  qse.qbit.rst  qse.qbits.rst  qse.rst  qse.signal.rst  qse.utils.rst  qse.visualise.rst
_sources/autoapi/: index.rst
_sources/autoapi/qse/: index.rst
_sources/examples/: pulser-calc-example.ipynb  pulser-myqlm-conversion.ipynb
_sources/theory/: adiabatic_evolution.ipynb
_sources/tutorials/: creating_and_manipulating_qbits.ipynb  pulser-calc-example.ipynb
_static/: documentation_options.js
autoapi/: index.html
autoapi/qse/: index.html
autoapi/qse/calc/: index.html
autoapi/qse/lattices/: index.html
autoapi/qse/magnetic/: index.html
autoapi/qse/qbit/: index.html
autoapi/qse/qbits/: index.html
autoapi/qse/qubo/: index.html
autoapi/qse/signal/: index.html
autoapi/qse/utils/: index.html
autoapi/qse/vis/: index.html
autoapi/qse/visualise/: index.html
docs/: CONTRIBUTIONS.md  INSTALLATION.md  INSTALLATION.rst  _config.yml  _toc.yml  api.rst  conf.py  doc_requirements.txt  index.md  requirements.txt
docs/source/: _toc.yml  api.rst  api_alternative.rst  conf.py  index.rst  intro.md  qse.rst  qse_logo.py  removal.md  utils.rst
docs/source/examples/: creating_and_manipulating_qbits.ipynb
docs/theory/: adiabatic_evolution.ipynb  blockade-radius.ipynb  spatial-correlation.md
docs/tutorials/: creating_and_manipulating_qbits.ipynb  finite-geometries.ipynb  generating_lattices.ipynb  operators.ipynb  pulser-calc-example.ipynb  ssh_model.ipynb  vqe_qiskit.ipynb
docs/use-cases/: adiabatic.ipynb  ising_model_pulser_1D.ipynb  ising_model_pulser_2D.ipynb  preparing_zoderings.ipynb  ssh_model.ipynb  time_evo.ipynb  trotter.ipynb
examples/: computing-spatial-correlations.ipynb  creating_and_manipulating_qbits.html  creating_and_manipulating_qbits.ipynb  gate_based.ipynb  generating_lattices.html  generating_lattices.ipynb  lattice_library.ipynb  pulser-calc-example.html  pulser-calc-example.ipynb  pulser-myqlm-conversion.html  pulser-myqlm-conversion.ipynb  qbits-test.py  qbits-tutorial.ipynb  qutip-dqpt.ipynb  qutip_simulation.ipynb  ssh_model.ipynb
hooks/: pre-push
qse/: __init__.py  cell.py  constraints.py  gate_based.py  lattice_library.py  lattices.py  magnetic.py  operator.py  qbit.py  qbits.py  qubo.py  signal.py  utils.py  visualise.py
qse/calc/: __init__.py  abc.py  blockade_radius.py  calculator.py  exact.py  magnetic.py  messages.py  myqlm.py  pulser.py  qutip.py  result.py  results.py  signal.py  single_particle.py  time_evolution.py
qse/lattices/: __init__.py  lattices.py
qse/operator/: __init__.py  operator.py  operators.py  sum_of_operators.py
qse/signal/: __init__.py  draw.py  signal.py  signals.py
qse/vis/: __init__.py  animate.py  colours.py  qbits.py  scalar.py  signal.py  visualise.py
scripts/: pre-push.py
test/: qbits_test.py
tests/: calc_test.py  calculator_test.py  lattice_library_test.py  lattices_test.py  magnetic_test.py  qbit_test.py  qbits_initialization_test.py  qbits_methods_test.py  qbits_test.py  utils_test.py
tests/local_tests/: check_pulser_myqlm.py  comparison.ipynb  results_myqlm.npy  results_pulser.npy
tests/qse/: calc_test.py  cell_test.py  lattices_test.py  magnetic_test.py  operator_test.py  qbit_test.py  qbits_initialization_test.py  qbits_methods_test.py  qbits_test.py  signal_test.py
tests/qse_myqlm/: qse_myqlm_test.py
tests/qse_pulser/: pulser_test.py  qse_pulser_test.py
theory/: adiabatic_evolution.html  blockade-radius.html  spatial-correlation.html
tutorials/: creating_and_manipulating_qbits.html  finite-geometries.html  generating_lattices.html  pulser-calc-example.html  ssh_model.html  vqe_qiskit.html
use-cases/: adiabatic.html  ssh_model.html
(+32 files in other folders)
