[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qse"
description = "Quantum Simulation Environment"
readme = "README.md"
authors = [
    {name = "Rajarshi Tiwari", email = "rajarshi.tiwari@ichec.ie"},
    {name = "Karthik Krishnakumar", email = "karthik.krishnakumar@ichec.ie"},
    {name = "James Nelson", email = "james.nelson@ichec.ie"},
    {name = "Sherry Blair", email = "sherry.blair@ichec.ie"}
    ]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "ase",
    "numpy",
    "matplotlib"
]

[project.urls]
homepage = "https://github.com/ichec/qse"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "ipykernel",
    "flake8", 
    "black[jupyter]",
    "isort"
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
enable_error_code = 'ignore-without-code'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=qse"