[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qse"
description = "Quantum Simulation Environment"
readme = "README.md"
authors = [
    {name = "Rajarshi Tiwari", email = "rajarshi.tiwari@ichec.ie"},
    {name = "Karthik Krishnakumar", email = "karthik.krishnakumar@ichec.ie"},
    {name = "James Nelson", email = "james.nelson@ichec.ie"},
    {name = "Sherry Blair", email = "sherry.blair@ichec.ie"}
    ]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "ase",
    "numpy",
    "matplotlib"
]

[project.urls]
homepage = "https://github.com/ichec/qse"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "ipykernel",
    "flake8", 
    "black[jupyter]",
    "isort",
    "Flake8-pyproject",
]
pulser = ["pulser == 1.4.0"]
myqlm = ["numpy == 1.26.4", "myqlm == 1.11.3"]
docs = [
    "sphinx",
    "sphinx-autoapi",
    "jupyter_book",
    "tomli",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
enable_error_code = 'ignore-without-code'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=qse"


[tool.flake8]
count = true
# Recommend matching the black line length (default 88)
# rather than using the flake8 default of 79:
max-line-length = 88
ignore = [
    "E203", # See https://github.com/PyCQA/pycodestyle/issues/373
]
statistics = true
show-source = true
select = [
    "E9",
    "F63",
    "F7",
    "F82",
    "F401",
    ]