[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qse"
description = "Quantum Simulation Environment"
readme = "README.md"
authors = [
    {name = "Rajarshi Tiwari", email = "rajarshi.tiwari@ichec.ie"},
    {name = "Karthik Krishnakumar", email = "karthik.krishnakumar@ichec.ie"},
    {name = "James Nelson", email = "james.nelson@ichec.ie"},
    {name = "Sherry Blair", email = "sherry.blair@ichec.ie"},
    {name = "Pablo Suárez Vieites", email = "pablo.suarez@ichec.ie"},
]
version = "1.1.15"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "qutip",
]
keywords = ["Quantum Simulation", "Analog Quantum Computing", "Lattice Models", "Python"]
classifiers = ["Programming Language :: Python",]

[tool.setuptools.package-dir]
qse = "qse"

[project.urls]
homepage = "https://github.com/ichec/qse"
Documentation = "https://ichec.github.io/qse"
Repository = "https://github.com/ICHEC/qse.git"
Issues = "https://github.com/ICHEC/qse/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "ipykernel",
    "ruff",      # Replaced flake8, black, isort, Flake8-pyproject
    "pulser",    # required for tests
    "pre-commit",
]
pulser = ["pulser"]
myqlm = ["myqlm"]
docs = [
    "jupyter-book>=1.0.0,<2.0.0",
    "jupyter-sphinx",
    "myst-nb>=1.1.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinxcontrib-mermaid",
    "ipykernel",
    "ipywidgets",
    "ipympl",
    "pulser",    # required for creating the docs
    "qiskit"
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "jupyter-book>=1.0.0,<2.0.0",
    "jupyter-sphinx>=0.5.3",
    "myst-nb>=1.1.0",
    "pre-commit>=4.6.0",
    "pulser>=1.8.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
    "qiskit>=2.4.1",
    "ruff>=0.15.12",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-togglebutton>=0.4.5",
    "sphinxcontrib-mermaid>=2.0.2",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
enable_error_code = 'ignore-without-code'

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov=qse"

# --- New Ruff Configuration ---
[tool.ruff]
output-format = "grouped"
line-length = 88
# This allows Ruff to format and lint Jupyter Notebooks just like black[jupyter] did
extend-include = ["*.ipynb"]
exclude = ["build", "dist", ".git", ".venv",]

[tool.ruff.lint]
# E: pycodestyle (flake8 default)
# F: pyflakes (flake8 default)
# I: isort
select = ["E", "F", "I"]

ignore = ["E741", "E731"]
# Do not use variables named 'I', 'O', or 'l'
# Note: Ruff inherently ignores E203 and W503 as they conflict with its formatter.

